<resources>
    <string name="app_name">E-Park - Navigation Drawer</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hamburger_menu">Hamburger Menu</string>
    <string name="hosgeldiniz">2-01-Ana Ekran</string>
    <string name="aracsinifisec">Aracınızın sınıfını seçiniz</string>
    <string name="saatsec">Saat seçiniz</string>
    <string name="aracsec">Aracınızı seçiniz</string>
    <string name="odemearacisec">Ödeme aracınızı seçin</string>
    <string name="uzatmakistediginizrezsec">Uzatmak istediğiniz rezervasyonu seçin</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baslik">Başlık</string>
    <string name="ototopark_ara">Otopark veya bir adres arayın</string>
    <string name="yakinimdaki_otoparklar">Yakınımdaki Otoparklar</string>
    <string name="e_posta_edittext_hint">e-posta</string>
    <string name="sifre">şifre</string>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="swipe_left_for_register">Kayıt ol ekranı için sola kaydırınız</string>
    <string name="login">Giriş Yap</string>
    <string name="password">Şifre</string>
    <string name="e_mail">E-mail</string>
    <string name="tag">Bize katılın ve otopark rezervasyonuna hemen başlayın!</string>
    <string name="swipe_right_for_login">Giriş ekranı için sağa doğru kaydırın</string>
    <string name="register">Kayıt Ol</string>
    <string name="re_type_password">Şifrenizi  tekrar  giriniz</string>
    <string name="your_name">İsim Soyisim</string>

    <string-array name="plakalarim_array">
        <item>34 GA 1527</item>
        <item>34 CD 1993</item>
        <item>34 HK 1994</item>
    </string-array>

    <string-array name="park_uzat_array">
        <item>Beşiktaş Kapalı Otoparkı 34 GA 1527 12.04.2020</item>
        <item>Ulus Otoparkı 34 CD 1993 15.04.2020</item>
    </string-array>

    <string-array name="arac_sinifi_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="saat_array">
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
        <item>00:00</item>
    </string-array>

    <string-array name="odeme_araclarim_array">
        <item>4926 **** **** **11</item>
        <item>1527 **** **** **89</item>
        <item>2222 **** **** **15</item>
    </string-array>
</resources>